# AI-Framework

./: .gitignore  AIKI.exp  AIKI.lib  Activation.hpp  CMakeLists.txt  DenseLayer.cpp  DenseLayer.hpp  README.md  Tensor.cpp  Tensor.hpp  bindings.cpp  cuda.exp  cuda.lib  main.cu  mikideeplib.pyd  pytensor.exp  pytensor.lib  test.cpp  test.py
GPU/: test.cu  test.exp
bindings/: bind.cpp  bindings.cpp
bindings_old/: bindings.cpp
c++/: Tensor.cpp  main.cpp  view.cpp
include/: Activation.hpp  DenseLayer.hpp  Tensor.hpp
python/: Perceptron.py  Tensor.py  test.py
python/Tensor/: tensor.py
python/tests/: tensor_bind.py  tensor_test.py
src/: Activation.cu  DenseLayer.cu  Tensor.cu  act.exp  act.lib  bi.exp  bi.lib  m.exp  m.lib  main.exp  run.exp  run.lib  t.exp  t.lib  tensor.exp  tensor.lib  test.exp
src/Activation/: Activation.cu  Activation.h
src/CPU/: CPUTensor.cpp  CPUTensor.h
src/DenseLayer/: DenseLayer.cu  DenseLayer.h
src/GPU/: GPULoader.cu  GPULoader.h  GPUModel.h  GPUTensor.cu  GPUTensor.h
src/GPU/Activation/: Activation.cu  Activation.h
src/GPU/Layer/: Layer.cu  Layer.h
src/Graph/: Graph.cpp  Graph.h
src/Tensor/: Tensor.cu  Tensor.h
tests/: Test.cpp  test.py
tests/Activation/: Activation_test.cu  test.exp
tests/DenseLayer/: DenseLayer_test.cu  test.exp
tests/GPU/: GPU_test.cu  test.exp
tests/GPU/Layer/: Layer_test.cu  test.exp
tests/Graph/: Graph_test.cpp  test.exp
tests/Tensor/: Tensor_test.cu  test.exp  test.lib
